[metadata]
name = thesis-experiment-test
version = 2.2.1
author = Wouter Peere
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
