[metadata]
name = thesis-experiment-test
version = file: VERSION.txt
author = Wouter Peere
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
	numpy>=1.23.1
